tests/ui/interp_unclosed.stderr
Error [E0002]: this `{` never gets a matching `}`
  --> tests/ui/interp_unclosed.jet:3:12
    |
  3 |     print("{name");
    |            ^^^^^^^^
 Why: `{` inside quoted text starts an interpolated value and needs a closing `}` before the text ends
 Fix: add a `}` after the value, or write `{{` for a literal brace
