tests/ui/interp_unclosed.jet
fn main() {
    val name = "Jet";
    print("{name");
}
